# terraform-codepipeline-run-task

./: README.md
modules/: cloudwatch.tf  iam.tf  lambda.tf  locals.tf  main.tf  output.tf  variables.tf
modules/function/: pyproject.toml  pysen.toml
modules/function/src/: handler.py
modules/function/tests/: test_handler.py
modules/function/tests/fixtures/: event.json
